@@ -5,6 +5,9 @@ Revision history for Perl extension Data::FormValidator::Filters::Image.
       (gtermars@cpan.org)
     - Rewrote test suite; now easier to follow
       (gtermars@cpan.org)
+    - Bug #40969; "Resizes image, even if not required"
+      If image is already within the maximum limits, don't resize it
+      (gtermars@cpan.org)
 
 0.30  Sat Oct 29 13:32:17 EDT 2005
 
